fixed tested div to be truly responsive (without a bunch of media queries) using the overflow css property

--- a/style.css
+++ b/style.css
@@ -21,7 +21,7 @@ ul{
 
 div{
   width:100%;
-  height:100%;
+  /*height:100%;*/
   padding:0;
   margin:0;
   background-color:#d9e6e6;
@@ -40,7 +40,7 @@ div.blanket{
 
 @media (min-width:500px){
   div.brown{
-    height:100%;
+    overflow:auto;
     background-color:#ba906a;
   }
 }
